# ComicConverter

./: .gitignore  App.xaml  App.xaml.cs  ComicConverter.csproj  ComicProcessor.cs  MainWindow.xaml  MainWindow.xaml.cs  README.md  WebPJobPSv2 - copia.ps1  error.txt  implementation_plan.md  test.cs
RustVersion/: implementation_plan.md
RustVersion/comic_converter/: Cargo.toml
RustVersion/comic_converter/src/: image_engine.rs  main.rs  processor.rs  settings.rs
publish_small/: settings.json
