[package]
name = "comic_converter"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.44"
eframe = "0.34.1"
image = "0.25.10"
num_cpus = "1.17.0"
rayon = "1.11.0"
regex = "1.12.3"
rfd = "0.17.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
walkdir = "2.5.0"
webp = "0.3.1"
zip = "8.5.1"
